[package]
name = "gte-core"
version = "0.1.0"
edition = "2021"
description = "Core of the GameTank Rust Emulator"

[dependencies]
# emulation
w65c02s = { path = "rust-w65c02s" }

rand = { version = "0.8", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }


# audio sybsystem
petgraph = "0.5.1"
dasp_graph = "0.11.0"
dasp_signal = "0.11.0"
dasp_interpolate = {  version = "0.11.0", features = ["linear", "sinc"] }

bit_field = "0.10.2"
bitfield = "0.14.0"
bytemuck = "1.19.0"

# logging / profiling
log = { version = "0.4", default-features = false }


heapless = "0.8"

# audio sybsystem
rtrb = { version = "0.3", default-features = false, features = [] }
